--- a/site/src/screen.scss
+++ b/site/src/screen.scss
@@ -5,7 +5,7 @@
 @import "partials/base";
 
 $blueprint-font-size:18px;
-$blueprint-font-family:Georgia, 'Kreon', serif;
+$blueprint-font-family:Futura, 'Kreon', serif;
 $blueprint-grid-columns: 24;
 // Import all the default blueprint modules so that we can access their mixins.
 @import "blueprint";
