Added more buttons

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,39 +1,38 @@
-@import "compass/css3/text-shadow" ;;
-/* line 30, ../src/main.sass */
+/* line 32, ../src/main.sass */
 body {
   background: #b4b8c5;
 }
-/* line 32, ../src/main.sass */
+/* line 34, ../src/main.sass */
 body.bp {
   margin-top: 30px;
   background: #b4b8c5;
 }
-/* line 35, ../src/main.sass */
+/* line 37, ../src/main.sass */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   color: #60646c;
   font-weight: bold;
   letter-spacing: -0.05em;
-  text-shadow: -1px -1px 0px #41444a, 0px 1px 0px #efeff4;
-}
-/* line 40, ../src/main.sass */
-body.bp h1 a:hover, body.bp h2 a:hover, body.bp h3 a:hover, body.bp h4 a:hover, body.bp h5 a:hover, body.bp h6 a:hover {
-  text-shadow: -1px -1px 0px #41444a, 0px 1px 0px #efeff4, 0 0 1px rgba(51, 0, 255, 0.7);
+  text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px;
 }
 /* line 42, ../src/main.sass */
+body.bp h1 a:hover, body.bp h2 a:hover, body.bp h3 a:hover, body.bp h4 a:hover, body.bp h5 a:hover, body.bp h6 a:hover {
+  text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px, rgba(51, 0, 255, 0.7) 0 0 1px;
+}
+/* line 44, ../src/main.sass */
 body.bp a {
   text-decoration: none;
   color: #60646c;
 }
-/* line 45, ../src/main.sass */
+/* line 47, ../src/main.sass */
 body.bp a:visited {
   color: #60646c;
 }
-/* line 47, ../src/main.sass */
+/* line 49, ../src/main.sass */
 body.bp a:hover, body.bp a:active {
   color: #2288cc;
 }
 
-/* line 51, ../src/main.sass */
+/* line 53, ../src/main.sass */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
@@ -45,29 +44,30 @@ body.bp a:hover, body.bp a:active {
   transition-duration: 0.2s;
 }
 
-/* line 62, ../src/main.sass */
+/* line 64, ../src/main.sass */
 #container {
   width: 950px;
   margin: 0 auto;
 }
 
-/* line 67, ../src/main.sass */
+/* line 69, ../src/main.sass */
 a {
   text-decoration: none;
 }
 
-/* line 70, ../src/main.sass */
+/* line 72, ../src/main.sass */
 h1 {
   text-align: center;
 }
 
-/* line 80, ../src/main.sass */
+/* line 82, ../src/main.sass */
 .block {
   display: inline;
   float: left;
   margin-right: 10px;
   width: 230px;
-  margin-top: 30px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
   -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -81,34 +81,97 @@ h1 {
   border-radius: 5px;
   margin-right: 30px;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html .block {
   overflow-x: hidden;
 }
-/* line 77, ../src/main.sass */
+/* line 79, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 85, ../src/main.sass */
+/* line 88, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 88, ../src/main.sass */
+/* line 103, ../src/main.sass */
 #choixlang {
   display: inline;
   float: left;
   margin-right: 10px;
   width: 150px;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html #choixlang {
   overflow-x: hidden;
 }
+/* line 105, ../src/main.sass */
+#choixlang a {
+  width: 100%;
+  text-align: center;
+  text-size: 14px;
+  padding: 3px;
+  text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  margin: 0.7em 0.5em 0.7em 0;
+  border-width: 1px;
+  border-style: solid;
+  font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+  font-size: 100%;
+  line-height: 130%;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.5);
+  color: #c9cede;
+}
+/* line 7, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+#choixlang a {
+  *display: inline;
+}
+/* line 75, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixlang a img {
+  margin: 0 3px -3px 0 !important;
+  padding: 0;
+  border: none;
+  width: 16px;
+  height: 16px;
+  float: none;
+}
+/* line 99, ../src/main.sass */
+#choixlang a:hover {
+  text-shadow: #3388cc 0 0 3px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.5) rgba(255, 255, 255, 0.5);
+  color: #efeff4;
+}
 
-/* line 91, ../src/main.sass */
+/* line 109, ../src/main.sass */
+#mainlinks {
+  display: inline;
+  float: left;
+  position: relative;
+  margin: 0 -120px 1.5em 120px;
+}
+
+/* line 112, ../src/main.sass */
 #choixrss {
   text-align: right;
+  display: inline;
+  float: left;
+  position: relative;
+  margin: 0 -120px 1.5em 120px;
   display: inline;
   float: left;
   position: relative;
@@ -119,12 +182,63 @@ h1 {
   width: 150px;
   margin-right: 0;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html #choixrss {
   overflow-x: hidden;
 }
+/* line 118, ../src/main.sass */
+#choixrss a {
+  width: 100%;
+  text-align: center;
+  text-size: 14px;
+  padding: 3px;
+  text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
+  display: -moz-inline-box;
+  -moz-box-orient: vertical;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  margin: 0.7em 0.5em 0.7em 0;
+  border-width: 1px;
+  border-style: solid;
+  font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+  font-size: 100%;
+  line-height: 130%;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.5);
+  color: #c9cede;
+}
+/* line 7, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+#choixrss a {
+  *display: inline;
+}
+/* line 75, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixrss a img {
+  margin: 0 3px -3px 0 !important;
+  padding: 0;
+  border: none;
+  width: 16px;
+  height: 16px;
+  float: none;
+}
+/* line 99, ../src/main.sass */
+#choixrss a:hover {
+  text-shadow: #3388cc 0 0 3px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.5) rgba(255, 255, 255, 0.5);
+  color: #efeff4;
+}
 
-/* line 98, ../src/main.sass */
+/* line 123, ../src/main.sass */
 #mainnav ul {
   padding-left: 0;
   list-style-type: none;
@@ -135,29 +249,29 @@ h1 {
   margin-right: 0;
   margin: 0 auto;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html #mainnav ul {
   overflow-x: hidden;
 }
-/* line 104, ../src/main.sass */
+/* line 129, ../src/main.sass */
 #mainnav ul li {
   display: inline;
   float: left;
   margin-right: 10px;
   width: 230px;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html #mainnav ul li {
   overflow-x: hidden;
 }
-/* line 106, ../src/main.sass */
+/* line 131, ../src/main.sass */
 #mainnav ul li * {
   display: block;
   text-align: center;
   width: 100%;
 }
 
-/* line 110, ../src/main.sass */
+/* line 135, ../src/main.sass */
 footer {
   display: inline;
   float: left;
@@ -165,12 +279,12 @@ footer {
   width: 950px;
   margin-right: 0;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.1/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html footer {
   overflow-x: hidden;
 }
 
-/* line 114, ../src/main.sass */
+/* line 139, ../src/main.sass */
 .flush {
   clear: both;
 }
