--- a/site/css/main.css
+++ b/site/css/main.css
@@ -1,38 +1,38 @@
-/* line 32, ../src/main.sass */
+/* line 33, ../src/main.sass */
 body {
-  background: #b4b8c5;
+  background: #efeff4;
 }
-/* line 34, ../src/main.sass */
+/* line 35, ../src/main.sass */
 body.bp {
   margin-top: 30px;
-  background: #b4b8c5;
+  background: #efeff4;
 }
-/* line 37, ../src/main.sass */
+/* line 38, ../src/main.sass */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   color: #60646c;
   font-weight: bold;
   letter-spacing: -0.05em;
   text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px;
 }
-/* line 42, ../src/main.sass */
+/* line 43, ../src/main.sass */
 body.bp h1 a:hover, body.bp h2 a:hover, body.bp h3 a:hover, body.bp h4 a:hover, body.bp h5 a:hover, body.bp h6 a:hover {
-  text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px, rgba(51, 0, 255, 0.7) 0 0 1px;
+  text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px, rgba(51, 136, 204, 0.5) 0 0 4px;
 }
-/* line 44, ../src/main.sass */
+/* line 45, ../src/main.sass */
 body.bp a {
   text-decoration: none;
   color: #60646c;
 }
-/* line 47, ../src/main.sass */
+/* line 48, ../src/main.sass */
 body.bp a:visited {
   color: #60646c;
 }
-/* line 49, ../src/main.sass */
+/* line 50, ../src/main.sass */
 body.bp a:hover, body.bp a:active {
-  color: #2288cc;
+  color: #86adff;
 }
 
-/* line 53, ../src/main.sass */
+/* line 54, ../src/main.sass */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
@@ -45,22 +45,27 @@ body.bp a:hover, body.bp a:active {
 }
 
 /* line 64, ../src/main.sass */
+.clickable {
+  cursor: pointer;
+}
+
+/* line 68, ../src/main.sass */
 #container {
   width: 950px;
   margin: 0 auto;
 }
 
-/* line 69, ../src/main.sass */
+/* line 73, ../src/main.sass */
 a {
   text-decoration: none;
 }
 
-/* line 72, ../src/main.sass */
+/* line 76, ../src/main.sass */
 h1 {
   text-align: center;
 }
 
-/* line 82, ../src/main.sass */
+/* line 86, ../src/main.sass */
 .block {
   display: inline;
   float: left;
@@ -79,22 +84,22 @@ h1 {
   -ms-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
-  margin-right: 30px;
+  margin-right: 50px;
 }
 /* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
 * html .block {
   overflow-x: hidden;
 }
-/* line 79, ../src/main.sass */
+/* line 83, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 88, ../src/main.sass */
+/* line 92, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 103, ../src/main.sass */
+/* line 122, ../src/main.sass */
 #choixlang {
   display: inline;
   float: left;
@@ -105,18 +110,19 @@ h1 {
 * html #choixlang {
   overflow-x: hidden;
 }
-/* line 105, ../src/main.sass */
+/* line 124, ../src/main.sass */
 #choixlang a {
-  width: 100%;
-  text-align: center;
-  text-size: 14px;
-  padding: 3px;
   text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  text-align: center;
+  display: inline;
+  float: left;
+  display: block;
   margin: 0.7em 0.5em 0.7em 0;
   border-width: 1px;
   border-style: solid;
@@ -126,19 +132,13 @@ h1 {
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -o-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -khtml-border-radius: 3px;
-  border-radius: 3px;
-  background-color: rgba(0, 0, 0, 0.2);
-  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.5);
-  color: #c9cede;
-}
-/* line 7, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
-#choixlang a {
-  *display: inline;
+  width: auto;
+  overflow: visible;
+  padding: 4px 10px 3px 7px;
+  background-color: #e3e5ed;
+  border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3);
+  color: #51555c;
+  width: 100%;
 }
 /* line 75, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
 #choixlang a img {
@@ -149,15 +149,43 @@ h1 {
   height: 16px;
   float: none;
 }
-/* line 99, ../src/main.sass */
+/* line 95, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixlang a[type] {
+  padding: 4px 10px 4px 7px;
+  line-height: 17px;
+}
+/* line 98, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+*:first-child + html #choixlang a[type] {
+  padding: 4px 10px 3px 7px;
+}
+/* line 62, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixlang a:hover {
+  background-color: #dff4ff;
+  border-color: #d2f1ff #c2e1ef #c2e1ef #d2f1ff;
+  color: #336699;
+}
+/* line 62, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixlang a:hover {
+  background-color: #d2d4dc;
+  border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3);
+  color: #caf1ff;
+}
+/* line 47, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixlang a:active {
+  background-color: #d2d4dc;
+  border-color: rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3);
+  color: #caf1ff;
+}
+/* line 117, ../src/main.sass */
 #choixlang a:hover {
   text-shadow: #3388cc 0 0 3px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
-  background-color: rgba(0, 0, 0, 0.3);
-  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.5) rgba(255, 255, 255, 0.5);
-  color: #efeff4;
+}
+/* line 119, ../src/main.sass */
+#choixlang a:active {
+  text-shadow: #33aaff 0 0 4px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
 }
 
-/* line 109, ../src/main.sass */
+/* line 128, ../src/main.sass */
 #mainlinks {
   display: inline;
   float: left;
@@ -165,7 +193,7 @@ h1 {
   margin: 0 -120px 1.5em 120px;
 }
 
-/* line 112, ../src/main.sass */
+/* line 131, ../src/main.sass */
 #choixrss {
   text-align: right;
   display: inline;
@@ -186,12 +214,13 @@ h1 {
 * html #choixrss {
   overflow-x: hidden;
 }
-/* line 118, ../src/main.sass */
+/* line 137, ../src/main.sass */
 #choixrss a {
   width: 100%;
   text-align: center;
   text-size: 14px;
-  padding: 3px;
+  padding: 4px;
+  height: 22px;
   text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
   display: -moz-inline-box;
   -moz-box-orient: vertical;
@@ -207,15 +236,15 @@ h1 {
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  -o-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -khtml-border-radius: 3px;
-  border-radius: 3px;
+  -moz-border-radius: 22px;
+  -webkit-border-radius: 22px;
+  -o-border-radius: 22px;
+  -ms-border-radius: 22px;
+  -khtml-border-radius: 22px;
+  border-radius: 22px;
   background-color: rgba(0, 0, 0, 0.2);
   border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.5);
-  color: #c9cede;
+  color: #41444a;
 }
 /* line 7, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
 #choixrss a {
@@ -230,7 +259,7 @@ h1 {
   height: 16px;
   float: none;
 }
-/* line 99, ../src/main.sass */
+/* line 104, ../src/main.sass */
 #choixrss a:hover {
   text-shadow: #3388cc 0 0 3px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -238,7 +267,7 @@ h1 {
   color: #efeff4;
 }
 
-/* line 123, ../src/main.sass */
+/* line 142, ../src/main.sass */
 #mainnav ul {
   padding-left: 0;
   list-style-type: none;
@@ -253,7 +282,7 @@ h1 {
 * html #mainnav ul {
   overflow-x: hidden;
 }
-/* line 129, ../src/main.sass */
+/* line 148, ../src/main.sass */
 #mainnav ul li {
   display: inline;
   float: left;
@@ -264,14 +293,14 @@ h1 {
 * html #mainnav ul li {
   overflow-x: hidden;
 }
-/* line 131, ../src/main.sass */
+/* line 150, ../src/main.sass */
 #mainnav ul li * {
   display: block;
   text-align: center;
   width: 100%;
 }
 
-/* line 135, ../src/main.sass */
+/* line 154, ../src/main.sass */
 footer {
   display: inline;
   float: left;
@@ -284,7 +313,7 @@ footer {
   overflow-x: hidden;
 }
 
-/* line 139, ../src/main.sass */
+/* line 158, ../src/main.sass */
 .flush {
   clear: both;
 }
