--- a/site/css/main.css
+++ b/site/css/main.css
@@ -4,35 +4,46 @@ body {
 }
 /* line 35, ../src/main.sass */
 body.bp {
-  margin-top: 30px;
   background: #efeff4;
 }
-/* line 38, ../src/main.sass */
+/* line 37, ../src/main.sass */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   color: #60646c;
   font-weight: bold;
   letter-spacing: -0.05em;
   text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px;
 }
-/* line 43, ../src/main.sass */
+/* line 42, ../src/main.sass */
+body.bp h1 a, body.bp h2 a, body.bp h3 a, body.bp h4 a, body.bp h5 a, body.bp h6 a {
+  color: #9ca1ad;
+}
+/* line 44, ../src/main.sass */
+body.bp h1 a:visited, body.bp h2 a:visited, body.bp h3 a:visited, body.bp h4 a:visited, body.bp h5 a:visited, body.bp h6 a:visited {
+  color: #9ca1ad;
+}
+/* line 46, ../src/main.sass */
+body.bp h1 a:hover, body.bp h1 a:active, body.bp h2 a:hover, body.bp h2 a:active, body.bp h3 a:hover, body.bp h3 a:active, body.bp h4 a:hover, body.bp h4 a:active, body.bp h5 a:hover, body.bp h5 a:active, body.bp h6 a:hover, body.bp h6 a:active {
+  color: #86adff;
+}
+/* line 48, ../src/main.sass */
 body.bp h1 a:hover, body.bp h2 a:hover, body.bp h3 a:hover, body.bp h4 a:hover, body.bp h5 a:hover, body.bp h6 a:hover {
   text-shadow: #41444a -1px -1px 0px, #efeff4 0px 1px 0px, rgba(51, 136, 204, 0.5) 0 0 4px;
 }
-/* line 45, ../src/main.sass */
+/* line 50, ../src/main.sass */
 body.bp a {
   text-decoration: none;
   color: #60646c;
 }
-/* line 48, ../src/main.sass */
+/* line 53, ../src/main.sass */
 body.bp a:visited {
   color: #60646c;
 }
-/* line 50, ../src/main.sass */
+/* line 55, ../src/main.sass */
 body.bp a:hover, body.bp a:active {
   color: #86adff;
 }
 
-/* line 54, ../src/main.sass */
+/* line 59, ../src/main.sass */
 * {
   -moz-transition-property: all;
   -webkit-transition-property: all;
@@ -44,28 +55,28 @@ body.bp a:hover, body.bp a:active {
   transition-duration: 0.2s;
 }
 
-/* line 64, ../src/main.sass */
+/* line 69, ../src/main.sass */
 .clickable {
   cursor: pointer;
 }
 
-/* line 68, ../src/main.sass */
+/* line 73, ../src/main.sass */
 #container {
   width: 950px;
   margin: 0 auto;
 }
 
-/* line 73, ../src/main.sass */
+/* line 78, ../src/main.sass */
 a {
   text-decoration: none;
 }
 
-/* line 76, ../src/main.sass */
+/* line 81, ../src/main.sass */
 h1 {
   text-align: center;
 }
 
-/* line 86, ../src/main.sass */
+/* line 91, ../src/main.sass */
 .block {
   display: inline;
   float: left;
@@ -90,16 +101,16 @@ h1 {
 * html .block {
   overflow-x: hidden;
 }
-/* line 83, ../src/main.sass */
+/* line 88, ../src/main.sass */
 .block > * {
   padding: 20px;
 }
-/* line 92, ../src/main.sass */
+/* line 97, ../src/main.sass */
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 122, ../src/main.sass */
+/* line 114, ../src/main.sass */
 #choixlang {
   display: inline;
   float: left;
@@ -110,7 +121,7 @@ h1 {
 * html #choixlang {
   overflow-x: hidden;
 }
-/* line 124, ../src/main.sass */
+/* line 116, ../src/main.sass */
 #choixlang a {
   text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
   -moz-border-radius: 3px;
@@ -176,24 +187,47 @@ h1 {
   border-color: rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3);
   color: #caf1ff;
 }
-/* line 117, ../src/main.sass */
+/* line 109, ../src/main.sass */
 #choixlang a:hover {
   text-shadow: #3388cc 0 0 3px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
 }
-/* line 119, ../src/main.sass */
+/* line 111, ../src/main.sass */
 #choixlang a:active {
   text-shadow: #33aaff 0 0 4px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
 }
 
-/* line 128, ../src/main.sass */
+/* line 120, ../src/main.sass */
+#mainnav {
+  display: inline;
+  float: left;
+  margin-right: 0;
+  width: 950px;
+  background: rgba(136, 51, 17, 0.2);
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #mainnav {
+  overflow-x: hidden;
+}
+
+/* line 126, ../src/main.sass */
 #mainlinks {
   display: inline;
   float: left;
   position: relative;
-  margin: 0 -120px 1.5em 120px;
+  margin: 0 -80px 1.5em 80px;
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 870px;
+}
+/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #mainlinks {
+  overflow-x: hidden;
 }
 
-/* line 131, ../src/main.sass */
+/* line 130, ../src/main.sass */
 #choixrss {
   text-align: right;
   display: inline;
@@ -214,19 +248,19 @@ h1 {
 * html #choixrss {
   overflow-x: hidden;
 }
-/* line 137, ../src/main.sass */
+/* line 136, ../src/main.sass */
 #choixrss a {
-  width: 100%;
-  text-align: center;
-  text-size: 14px;
-  padding: 4px;
-  height: 22px;
   text-shadow: rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
-  display: -moz-inline-box;
-  -moz-box-orient: vertical;
-  display: inline-block;
-  vertical-align: middle;
-  *vertical-align: auto;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  border-radius: 3px;
+  text-align: center;
+  display: inline;
+  float: left;
+  display: block;
   margin: 0.7em 0.5em 0.7em 0;
   border-width: 1px;
   border-style: solid;
@@ -236,19 +270,13 @@ h1 {
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
-  -moz-border-radius: 22px;
-  -webkit-border-radius: 22px;
-  -o-border-radius: 22px;
-  -ms-border-radius: 22px;
-  -khtml-border-radius: 22px;
-  border-radius: 22px;
-  background-color: rgba(0, 0, 0, 0.2);
-  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.5);
-  color: #41444a;
-}
-/* line 7, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
-#choixrss a {
-  *display: inline;
+  width: auto;
+  overflow: visible;
+  padding: 4px 10px 3px 7px;
+  background-color: #e3e5ed;
+  border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3);
+  color: #51555c;
+  width: 100%;
 }
 /* line 75, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
 #choixrss a img {
@@ -259,48 +287,55 @@ h1 {
   height: 16px;
   float: none;
 }
-/* line 104, ../src/main.sass */
+/* line 95, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixrss a[type] {
+  padding: 4px 10px 4px 7px;
+  line-height: 17px;
+}
+/* line 98, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+*:first-child + html #choixrss a[type] {
+  padding: 4px 10px 3px 7px;
+}
+/* line 62, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixrss a:hover {
+  background-color: #dff4ff;
+  border-color: #d2f1ff #c2e1ef #c2e1ef #d2f1ff;
+  color: #336699;
+}
+/* line 62, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixrss a:hover {
+  background-color: #d2d4dc;
+  border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3) rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3);
+  color: #caf1ff;
+}
+/* line 47, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_buttons.scss */
+#choixrss a:active {
+  background-color: #d2d4dc;
+  border-color: rgba(0, 0, 0, 0.3) rgba(255, 255, 255, 0.3) rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.3);
+  color: #caf1ff;
+}
+/* line 109, ../src/main.sass */
 #choixrss a:hover {
   text-shadow: #3388cc 0 0 3px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
-  background-color: rgba(0, 0, 0, 0.3);
-  border-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.5) rgba(0, 0, 0, 0.5) rgba(255, 255, 255, 0.5);
-  color: #efeff4;
+}
+/* line 111, ../src/main.sass */
+#choixrss a:active {
+  text-shadow: #33aaff 0 0 4px, rgba(0, 0, 0, 0.5) 0px -1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px;
 }
 
-/* line 142, ../src/main.sass */
+/* line 141, ../src/main.sass */
 #mainnav ul {
   padding-left: 0;
   list-style-type: none;
-  display: inline;
-  float: left;
-  margin-right: 10px;
-  width: 950px;
-  margin-right: 0;
   margin: 0 auto;
 }
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
-* html #mainnav ul {
-  overflow-x: hidden;
-}
-/* line 148, ../src/main.sass */
-#mainnav ul li {
-  display: inline;
-  float: left;
-  margin-right: 10px;
-  width: 230px;
-}
-/* line 147, ../../../../../../var/lib/gems/1.8/gems/compass-0.11.3/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
-* html #mainnav ul li {
-  overflow-x: hidden;
-}
-/* line 150, ../src/main.sass */
+/* line 146, ../src/main.sass */
 #mainnav ul li * {
   display: block;
   text-align: center;
-  width: 100%;
 }
 
-/* line 154, ../src/main.sass */
+/* line 149, ../src/main.sass */
 footer {
   display: inline;
   float: left;
@@ -313,7 +348,7 @@ footer {
   overflow-x: hidden;
 }
 
-/* line 158, ../src/main.sass */
+/* line 153, ../src/main.sass */
 .flush {
   clear: both;
 }
